--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -15,13 +15,12 @@ body {
     padding-left: 6%;
     padding-top: 3%;
     position: relative;
-
 }
 
 .tilbageknap {
     position: fixed;
-    right: 0px;
-    button: 0px;
+    right: 0;
+
     width: 200px;
     height: 40px;
     padding: 5px;
@@ -30,21 +29,40 @@ body {
     border-width: medium;
     border-color: black;*/
 }
+
 .marker{
     position: fixed;
-    right: 0px;
-    button: 0px;
+    right: 0;
     width: 200px;
     height: 40px;
     padding: 5px;
     border: 5px;
-    text-align: end;
+    margin-top: 250px;
 
+    /*background-color: #4CAF50; /* Green
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;*/
 
 }
 
+#cpr {
+}
 
-
+.dropdown {
+    margin-top: 50px;
+    /*background-color: rgb(11,71,144);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    se https://www.w3schools.com/css/css_dropdowns.asp*/
+}
 
 
 
