--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -1,10 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 
-
-}
+/* baggrund */
 body {
     font-family: 'Times New Roman', sans-serif;
     background-image: url("IMG/white-abstract.jpg");
@@ -16,6 +11,93 @@ body {
     padding-top: 3%;
     position: relative;
 }
+/*tekstfelt*/
+.tekstfelt{
+    display: block;
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    height: 50%;
+    left:30%;
+    padding: 80px 40px 40px;
+    background: grey;
+    border-radius: 10px;
+    color: black;
+}
+
+
+/* Dropdown Button */
+.dropdownbtn {
+    background-color: rgb(11,71,144);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.button1 {
+    border: 1px solid rgb(11, 71, 144);
+    background-color: rgb(11, 71, 144);
+    color: white;
+    height: 30px;
+    text-decoration: underline;
+}
+
+.button1:hover {
+    background-color: dodgerblue;
+}
+
+.button1:active {
+    background-color: dodgerblue;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: dodgerblue;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content label {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content label:hover {background-color: #ddd}
+
+/* Show the dropdown menu */
+.show {display:block;}
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+
+}
+
 
 .tilbageknap {
     position: fixed;
@@ -25,9 +107,9 @@ body {
     height: 40px;
     padding: 5px;
     border: 5px;
-    /*border-style: solid;
+    border-style: solid;
     border-width: medium;
-    border-color: black;*/
+    border-color: black;
 }
 
 .marker{
@@ -39,44 +121,13 @@ body {
     border: 5px;
     margin-top: 250px;
 
-    /*background-color: #4CAF50; /* Green
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;*/
-
-}
-
-#cpr {
-}
-
-.dropdown {
-    margin-top: 50px;
-    /*background-color: rgb(11,71,144);
-    color: white;
-    padding: 16px;
     font-size: 16px;
-    border: none;
-    cursor: pointer;
-    se https://www.w3schools.com/css/css_dropdowns.asp*/
+
 }
-
-
-
-
-/* til hvis der ønskes en baggrund..
-.baggrund{
-    height: 70vh;
-    width: 50%;
-    background-image: url("IMG/EKGbaggrund.png");
-    font-family: 'Times New Roman', sans-serif;
-    background-position: center;
-    background-size: cover;
-    padding-right: 10%;
-    padding-left: 10%;
-    box-sizing: border-box;
-    position: relative;
-}*/
