--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -11,7 +11,7 @@ body {
     padding-top: 3%;
     position: relative;
 }
-/*tekstfelt*/
+/*HAr kaldt den noget andet
 .tekstfelt{
     display: block;
     position: relative;
@@ -23,7 +23,7 @@ body {
     background: grey;
     border-radius: 10px;
     color: black;
-}
+}*/
 
 
 /* Dropdown Button */
@@ -71,7 +71,7 @@ body {
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
 }
 
@@ -89,24 +89,19 @@ body {
 /* Show the dropdown menu */
 .show {display:block;}
 
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
-
 }
-
 
 .tilbageknap {
     position: fixed;
     right: 0;
-
     width: 200px;
     height: 40px;
     padding: 5px;
-    border: 5px;
+    /*border: 5px;*/
     border-style: solid;
     border-width: medium;
     border-color: black;
@@ -117,17 +112,12 @@ body {
     right: 0;
     width: 200px;
     height: 40px;
-    padding: 5px;
-    border: 5px;
-    margin-top: 250px;
-
-    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-
+    font-size: 50px;
+    margin-top: 250px;
 }
