--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -41,7 +41,7 @@ body {
     background-color: rgb(11, 71, 144);
     color: white;
     height: 30px;
-    text-decoration: underline;
+    padding: 10px;
 }
 
 .button1:hover {
@@ -105,6 +105,8 @@ body {
     border-style: solid;
     border-width: medium;
     border-color: black;
+
+
 }
 
 .marker{
