--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -105,8 +105,6 @@ body {
     border-style: solid;
     border-width: medium;
     border-color: black;
-
-
 }
 
 .marker{
@@ -122,4 +120,10 @@ body {
     display: inline-block;
     font-size: 50px;
     margin-top: 250px;
+}
+
+#mycanvas{
+    position: fixed;
+    height: 100px;
+    width: 100px;
 }
