--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -105,25 +105,38 @@ body {
     border-style: solid;
     border-width: medium;
     border-color: black;
+
+
 }
 
 .marker{
     position: fixed;
     right: 0;
-    width: 200px;
+    width: 100px;
     height: 40px;
-    border: none;
+    padding: 5px;
+    /*border: 5px;*/
+    border-style: solid;
+    border-width: medium;
+    border-color: black;
+
+    background-color: rgb(11, 71, 144);
     color: white;
-    padding: 15px 32px;
+
     text-align: center;
-    text-decoration: none;
     display: inline-block;
-    font-size: 50px;
-    margin-top: 250px;
+    font-size: 12px;
 }
 
-#mycanvas{
-    position: fixed;
-    height: 100px;
-    width: 100px;
+#myCanvas {
+    border:1px solid #000000;
+    border-radius: 5px;
+    width:1200px;
+    height:600px;
+}
+#myChart {
+    border:1px solid #000000;
+    border-radius: 5px;
+    width:1200px;
+    height:600px;
 }
