--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -34,6 +34,8 @@ body {
     font-size: 16px;
     border: none;
     cursor: pointer;
+
+
 }
 
 .button1 {
@@ -42,6 +44,7 @@ body {
     color: white;
     height: 30px;
     padding: 10px;
+
 }
 
 .button1:hover {
@@ -58,10 +61,10 @@ body {
 .dropbtn:hover, .dropbtn:focus {
     background-color: dodgerblue;
 }
-
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    position: relative;
+    position: absolute;
+    /*position: relative;*/
     display: inline-block;
 }
 
@@ -96,22 +99,27 @@ body {
 }
 
 .tilbageknap {
-    position: fixed;
+    position: absolute;
     right: 0;
-    width: 200px;
+    top: 0;
+    width: 100px;
     height: 40px;
     padding: 5px;
     /*border: 5px;*/
     border-style: solid;
     border-width: medium;
     border-color: black;
-
+    text-align: center;
+    display: inline-block;
+    font-size: 12px;
 
 }
 
 .marker{
     position: fixed;
     right: 0;
+    bottom: 20px;
+    top: 500px;
     width: 100px;
     height: 40px;
     padding: 5px;
