--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -11,20 +11,6 @@ body {
     padding-top: 3%;
     position: relative;
 }
-/*HAr kaldt den noget andet
-.tekstfelt{
-    display: block;
-    position: relative;
-    width: 100%;
-    max-width: 400px;
-    height: 50%;
-    left:30%;
-    padding: 80px 40px 40px;
-    background: grey;
-    border-radius: 10px;
-    color: black;
-}*/
-
 
 /* Dropdown Button */
 .dropdownbtn {
@@ -34,17 +20,14 @@ body {
     font-size: 16px;
     border: none;
     cursor: pointer;
-
-
 }
 
 .button1 {
     border: 1px solid rgb(11, 71, 144);
-    background-color: rgb(11, 71, 144);
+    height: 20px;
+    width: 40px;
+    background: rgb(11, 71, 144);
     color: white;
-    height: 30px;
-    padding: 10px;
-
 }
 
 .button1:hover {
@@ -66,6 +49,7 @@ body {
     position: absolute;
     /*position: relative;*/
     display: inline-block;
+    margin-top: 26px;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -100,8 +84,8 @@ body {
 
 .tilbageknap {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 88px;
+    top: 65px;
     width: 100px;
     height: 40px;
     padding: 5px;
@@ -117,9 +101,9 @@ body {
 
 .marker{
     position: fixed;
-    right: 0;
+    right: 88px;
     bottom: 20px;
-    top: 500px;
+    top: 145px;
     width: 100px;
     height: 40px;
     padding: 5px;
