--- a/src/main/webapp/EKGside.css
+++ b/src/main/webapp/EKGside.css
@@ -1,33 +1,30 @@
 
+
+
 /* baggrund */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     font-family: 'Times New Roman', sans-serif;
     background-image: url("IMG/white-abstract.jpg");
     background-size: cover;
     height: 100vh;
     width: 100%;
-    padding-right: 6%;
-    padding-left: 6%;
-    padding-top: 3%;
+    padding-right: 1%;
+    padding-left: 1%;
+    padding-top: 1%;
     position: relative;
 }
-
-/* Dropdown Button */
-.dropdownbtn {
-    background-color: rgb(11,71,144);
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
+/* classer til standard knap */
 .button1 {
     border: 1px solid rgb(11, 71, 144);
-    height: 20px;
-    width: 40px;
-    background: rgb(11, 71, 144);
+    background-color: rgb(11, 71, 144);
     color: white;
+    height: 30px;
+    font-family: "Times New Roman", sans-serif;
 }
 
 .button1:hover {
@@ -40,47 +37,6 @@ body {
     transform: translateY(4px);
 }
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: dodgerblue;
-}
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: absolute;
-    /*position: relative;*/
-    display: inline-block;
-    margin-top: 26px;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content label {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content label:hover {background-color: #ddd}
-
-/* Show the dropdown menu */
-.show {display:block;}
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 .tilbageknap {
     position: absolute;
@@ -119,16 +75,28 @@ body {
     display: inline-block;
     font-size: 12px;
 }
-
-#myCanvas {
-    border:1px solid #000000;
-    border-radius: 5px;
-    width:1200px;
-    height:600px;
-}
+/* indstillinger til grafen */
 #myChart {
+    left: 380px;
+    background-color: ghostwhite;
+    position: absolute;
     border:1px solid #000000;
     border-radius: 5px;
-    width:1200px;
-    height:600px;
+    top: 145px;
+
+    max-width: 60%;
+    max-height: 60%;
+}
+
+/* felt der skal indeholde sessioner*/
+.sessionsfelt{
+    position: fixed;
+    border: 1px;
+    margin: 1px;
+    top: 145px;
+    width: 300px;
+    height: 50%;
+    padding: 5px;
+    background: grey;
+    color: black;
 }
