--- a/src/main/webapp/Login.css
+++ b/src/main/webapp/Login.css
@@ -25,7 +25,7 @@ body {
     position: relative;
     width: 100%;
     max-width: 380px;
-    height: 60%;
+    height: 450px;
     padding: 80px 40px 40px;
     background: rgba(0,0,0,0.8); /* baggrunds farven*/
     border-radius: 10px;
